templates/maven/maven-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: maven
  name: maven
