templates/maven/maven-public-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: maven
    role: public
    romulus/lb: vulcan
    romulus/route: public
  name: maven-public
  namespace: maven
spec:
  ports:
  - name: maven-public
    port: 80
  selector:
    app: maven
    role: public
